AdventureDice/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/scrufulufugus/Developer/APCS/Hello/Hello
-d
/Users/scrufulufugus/Developer/APCS/Hello/Hello/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/scrufulufugus/Developer/APCS/Hello/Hello/PollDisplayPanel.java
<---- end of javadoc command ---->
Loading source file /Users/scrufulufugus/Developer/APCS/Hello/Hello/PollDisplayPanel.java...
/Users/scrufulufugus/Developer/APCS/Hello/Hello/PollDisplayPanel.java:16: error: <identifier> expected
  ________________________________________________________
                                                          ^
/Users/scrufulufugus/Developer/APCS/Hello/Hello/PollDisplayPanel.java:34: error: not a statement
    ______________________________________
    ^
/Users/scrufulufugus/Developer/APCS/Hello/Hello/PollDisplayPanel.java:34: error: ';' expected
    ______________________________________
                                          ^
/Users/scrufulufugus/Developer/APCS/Hello/Hello/PollDisplayPanel.java:41: error: not a statement
    ______________________________________
    ^
/Users/scrufulufugus/Developer/APCS/Hello/Hello/PollDisplayPanel.java:41: error: ';' expected
    ______________________________________
                                          ^
/Users/scrufulufugus/Developer/APCS/Hello/Hello/PollDisplayPanel.java:48: error: not a statement
    ______________________________________
    ^
/Users/scrufulufugus/Developer/APCS/Hello/Hello/PollDisplayPanel.java:48: error: ';' expected
    ______________________________________
                                          ^
/Users/scrufulufugus/Developer/APCS/Hello/Hello/PollDisplayPanel.java:97: error: not a statement
      _________________________________________________
      ^
/Users/scrufulufugus/Developer/APCS/Hello/Hello/PollDisplayPanel.java:97: error: ';' expected
      _________________________________________________
                                                       ^
9 errors
